# delirio

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  main.cpp  meson.build
shaders/: meson.build  shader.frag  shader.vert
src/: main.cpp  meson.build
